# CMake project file for firtree
#
# Copyright (C) 2007, 2008 Rich Wareham <richwareham@gmail.com>
#
# See LICENSE file for distribution rights.

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLEW)
FIND_PACKAGE(GLUT)
FIND_PACKAGE(Magick++)

SET(EXAMPLE_HEADERS
)

SET(EXAMPLE_SOURCES
    ${EXAMPLE_HEADERS}

    common.cpp   main.cpp
)

SET(EXAMPLE_TARGET_LIBRARIES "")
SET(EXAMPLE_TARGET_INCLUDES "")

IF (OPENGL_LIBRARIES)
    SET(EXAMPLE_TARGET_LIBRARIES ${EXAMPLE_TARGET_LIBRARIES} ${OPENGL_LIBRARIES})
    SET(EXAMPLE_TARGET_INCLUDES ${EXAMPLE_TARGET_INCLUDES} ${OPENGL_INCLUDE_DIR})
ELSE(OPENGL_LIBRARIES)
    MESSAGE(SEND_ERROR "OpenGL is required to build this example.")
ENDIF (OPENGL_LIBRARIES)

IF(GLUT_FOUND)
    SET(EXAMPLE_TARGET_LIBRARIES ${EXAMPLE_TARGET_LIBRARIES} ${GLUT_LIBRARIES})
    SET(EXAMPLE_TARGET_INCLUDES ${EXAMPLE_TARGET_INCLUDES} ${GLUT_INCLUDE_DIR})
ELSE(GLUT_FOUND)
    MESSAGE(SEND_ERROR "GLUT is required to build this example.")
ENDIF(GLUT_FOUND)

IF(GLEW_FOUND)
    SET(EXAMPLE_TARGET_LIBRARIES ${EXAMPLE_TARGET_LIBRARIES} ${GLEW_LIBRARIES})
    SET(EXAMPLE_TARGET_INCLUDES ${EXAMPLE_TARGET_INCLUDES} ${GLEW_INCLUDE_DIR})
ELSE(GLEW_FOUND)
    MESSAGE(SEND_ERROR "GLEW is required to build this example.")
ENDIF(GLEW_FOUND)

IF(MAGICKPP_LIBRARIES)
    SET(EXAMPLE_TARGET_LIBRARIES ${EXAMPLE_TARGET_LIBRARIES} ${MAGICKPP_LIBRARIES})
    SET(EXAMPLE_TARGET_INCLUDES ${EXAMPLE_TARGET_INCLUDES} ${MAGICKPP_INCLUDE_DIR})
ELSE(MAGICKPP_LIBRARIES)
    MESSAGE(SEND_ERROR "ImageMagick is required to build this example.")
ENDIF(MAGICKPP_LIBRARIES)

INCLUDE_DIRECTORIES(${EXAMPLE_TARGET_INCLUDES})
ADD_EXECUTABLE(simple-glsl ${EXAMPLE_SOURCES})
TARGET_LINK_LIBRARIES(simple-glsl firtree ${EXAMPLE_TARGET_LIBRARIES})

# Vim modeline
# vim:ts=4:sw=4:et
