# CMakeLists file for LLVM GLSL target.

FIND_PACKAGE(LLVM)
IF(NOT LLVM_FOUND)
  MESSAGE(SEND_ERROR "LLVM required for Firtree.")
ENDIF(NOT LLVM_FOUND)

SET(GLSL_TARGET_HEADERS
  glsl-target.h
)

SET(GLSL_TARGET_SOURCES
  ${GLSL_TARGET_HEADERS}

  glsl-target.cc
)

ADD_DEFINITIONS(-D__STDC_LIMIT_MACROS -DLLVM_MAJOR_VER=${LLVM_MAJOR} -DLLVM_MINOR_VER=${LLVM_MINOR})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIR})
ADD_LIBRARY(glsl-target ${GLSL_TARGET_SOURCES})
TARGET_LINK_LIBRARIES(glsl-target ${LLVM_LIBRARIES})

# vim:sw=2:ts=2:et
